--- a/Imputation/README
+++ b/Imputation/README
@@ -29,5 +29,8 @@ Ouputs :
 	output_directory/pop/Filtred/imputed.SNP.filtred.vcf.gz - Soft filter vcf for high missing
 	output_directory/pop/Filtred/imputed.SNP.hard_filtred.vcf.gz - Hard filter vcf , remove sites : nonPass, multiallelic, monomorphic
 	output_directory/pop/Filtred/imputed.SNP.filtred.final.vcf.gz - Hard filter vcf , remove MAF < 0.05
+	output_directory/pop/Pruned/prune.in - files with name of SNPs not in linkage disequilibrium
+	output_directory/pop/Pruned/prune.out - files with name of SNPs in linkage disequilibrium
+	output_directory/pop/Pruned/.vcf.gz - vcf files with only SNPs not in linkage disequilibrium
 	
 
