--- a/Isotypes/README
+++ b/Isotypes/README
@@ -14,7 +14,7 @@ Set of script to obtain isotypes groups
 3-Set_cutoffs_Isotypes.R:
 	ouput : Removed_line_concordance.csv - Store names of lines belonging to known isotypes by with LowConcordance
 		Removed_line_doublon.csv - Store name of the line which was considered twice by mistake
-		matrix_concordance.by_hand.0.982.corrected.tsv - concordance matrix corrected, remove known isotypes inferior to the cutoff (0.982 is the NaN cutoff)
+		matrix_concordance.by_hand.corrected.tsv - concordance matrix corrected, remove known isotypes inferior to the cutoff
 
 4-Pb_Isotypes.R:
 	compute isotypes groups and spot ones which are shared between several groups and compute a new concordance matrix
